--- a/index.html
+++ b/index.html
@@ -11,7 +11,46 @@
     <img src="./img/pexels-bill-emrich-230794-0.jpg" alt="London Eye">
     <img src="./img/pexels-bill-emrich-230794-1.jpg" alt="River Thames">
     <img src="./img/pexels-bill-emrich-230794-2.jpg" alt="Big Ben">
-   <br>
-   
+    <hr>
+
+   <!-- Blocco 2 -->
+    <h2>Le mie spese</h2>
+    <div>
+        <table>
+            <thead>
+                <tr>
+                    <th>Numero</th>
+                    <th>Descrizione</th>
+                    <th>Costo</th>
+                </tr>
+            </thead>
+
+            <tbody>
+                <tr>
+                    <td>1</td>
+                    <td>Biglietto Aereo</td>
+                    <td>120&euro;</td>
+                </tr>
+                <tr>
+                    <td>1</td>
+                    <td>Biglietto Aereo</td>
+                    <td>120&euro;</td>
+                </tr>
+                <tr>
+                    <td>1</td>
+                    <td>Biglietto Aereo</td>
+                    <td>120&euro;</td>
+                </tr>
+            </tbody>
+            <tfoot>
+                <tr>
+                    <td colspan="2">Totale</td>
+                    <td>360&euro;</td>
+                </tr>
+            </tfoot>
+        </table>
+    </div>
+    <hr>
+
 </body>
 </html>
