--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Viaggio a Londra</title>
 </head>
 <body>
    <!-- Blocco 1 -->
@@ -49,6 +49,18 @@
                 </tr>
             </tfoot>
         </table>
+    </div>
+    <hr>
+
+    <!-- Blocco 3 -->
+    <h2>Cose da fare</h2>
+    <div>
+        <ul>
+            <li>Visitare la Tower of London &#10007</li>
+            <li>Visitare Greenwich &#10003</li>
+            <li>Ascoltare un artista di strada a Covent Garden &#10003</li>
+            <li>Mangiare il tipico fish and Chips inglese &#10007</li>
+        </ul>
     </div>
     <hr>
 
