--- a/index.html
+++ b/index.html
@@ -64,5 +64,32 @@
     </div>
     <hr>
 
+    <!-- Blocco 4 -->
+    <h2>Info utili</h2>
+    <div>
+        <ol>
+            <li>Numeri utili di emergenza
+                <ul>
+                    <li><b>999</b> - Emergenza</li>
+                    <li><b>101</b> - Numero polizia</li>
+                    <li><b>111</b> - Numero assistenza medica</li>
+                </ul>
+            </li>
+            <li>Hotel
+                <ul>
+                    <li><b>Nome hotel:</b> Buckingham palace</li>
+                    <li><b>Indirizzo hotel:</b> Westminster, London SW1A 1AA, Regno Unito</li>
+                </ul>
+            </li>
+            <li>Aereo
+                <ul>
+                    <li><b>Volo di andata:</b> Y1234X, ore 9,30 da Milano Malpensa</li>
+                    <li><b>Volo di ritorno:</b> Y1236X, ore 18.30 da London Heathrow</li>
+                </ul>
+
+            </li>
+        </ol>
+    </div>
+
 </body>
 </html>
